fix banner wrapping on feature

--- a/tuneme/static/css/styles.css
+++ b/tuneme/static/css/styles.css
@@ -29,7 +29,7 @@ blockquote {padding:0 0 15px 0; background:white; color:black; font-size:115%; l
 
 /* Images */
 img {max-width:100%;}
-.banner img {display: block; width: 100%; height: 100%}
+.banner img {width: 100%; margin-bottom: -3px}
 
 
 /* Header */
